# finarva

./: README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
AI Backend/: ai-characters.py  conv_db_gen.py  conversation analyzer.py  conversations.json  partner_analyzer.py  pyproject.toml  rag_engine.py  requirements.txt  vectordb_gen.py
AI Backend/chroma_db_negative/: chroma.sqlite3
AI Backend/chroma_db_positive/: chroma.sqlite3
AI Backend/health_rag_db/806a0b6b-7569-4162-a401-01a423b49278/: index_metadata.pickle
AI Backend/negative_conversations/: negative_15.txt  negative_16.txt  negative_17.txt  negative_18.txt  negative_19.txt  negative_5.txt  negative_6.txt  negative_7.txt  negative_8.txt  negative_9.txt
AI Backend/positive_conversations/: positive_0.txt  positive_1.txt  positive_10.txt  positive_11.txt  positive_12.txt  positive_13.txt  positive_14.txt  positive_2.txt  positive_3.txt  positive_4.txt
app/: globals.css  layout.tsx  page.tsx
app/gurukul/: page.tsx
app/history/: page.tsx
app/insurances/: page.tsx
app/leaderboard/: page.tsx
app/learning-module/: page.tsx
components/: agent-notes.tsx  call-history.tsx  chat-bot.tsx  chat-dialog.tsx  client-card.tsx  client-history.tsx  client-list.tsx  client-profile.tsx  conversation-card.tsx  conversation-upload-dialog.tsx  create-client-modal.tsx  insurance-assistant.tsx  insurance-card.tsx  main-nav.tsx  main-navbar.tsx  navbar.tsx  new-client-dialog.tsx  recommended-insurance.tsx  trending-insurances.tsx
lib/: mock-data.ts
types/: index.ts
utils/: clientStorage.ts
(+22 files in other folders)
