[project]
name = "finarvaai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.4",
    "azure-storage-file-datalake>=12.20.0",
    "chromadb>=1.0.10",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "groq>=0.26.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-google-genai>=2.1.5",
    "langchain-groq>=0.3.2",
    "nltk>=3.9.1",
    "pymupdf>=1.26.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
]
